fix: spoiler tags in list being too close together

--- a/docs/.vuepress/theme/styles/theme.scss
+++ b/docs/.vuepress/theme/styles/theme.scss
@@ -269,6 +269,7 @@ blockquote {
   margin: 0;
   word-break: break-word;
   font-weight: bold;
+  margin-right: 5px;
 }
 
 // .attribute {
